# bml-photo-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
bml_photo_pipeline/: cli.py  config.py  heic_convert.py  processing.py  rclone.py  state.py
config/: default.json
docs/: systemd-user-service.example
scripts/: requeue-heic-needs-review.py  run-daemon.sh  run-once.sh  setup-onedrive-folders.sh
tests/: test_cli.py  test_heic_convert.py  test_processing.py
