[project]
name = "bml-photo-pipeline"
version = "0.1.0"
description = "Automated OneDrive product photo processing for Bluegrass Maker Lab."
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
  "watchdog>=3.0",
  "numpy>=1.24",
  "rembg>=2.0",
  "pillow-heif>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
bml-photo-pipeline = "bml_photo_pipeline.cli:main"
bml-heic-to-jpeg = "bml_photo_pipeline.heic_convert:main"

[tool.setuptools.packages.find]
include = ["bml_photo_pipeline*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
